--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Urbex Log · Salem & Around</title>
+  <title>Urbex Log · Salem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Tailwind for layout & styling -->
+  <!-- Tailwind for layout -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Your own extra CSS -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Main JS (defines initMap) -->
+  <!-- App logic (no Google Maps API needed) -->
   <script defer src="main.js"></script>
 </head>
 <body class="h-full bg-slate-950 text-slate-100">
@@ -24,11 +24,9 @@
             Urbex Log · Salem
           </h1>
           <p class="text-xs md:text-sm text-slate-400">
-            Private map of interesting spots around Salem / Oregon. For info only — stay legal and safe.
+            Private urbex notes around Salem / Oregon. 
           </p>
         </div>
-        <span class="text-[11px] md:text-xs px-2.5 py-1 rounded-full border border-amber-400/60 text-amber-200 bg-amber-500/10">
-          ⚠️ No trespassing · No breaking in
         </span>
       </div>
     </header>
@@ -38,54 +36,53 @@
       <div class="max-w-6xl mx-auto px-4 py-4 h-full">
         <div class="flex flex-col md:flex-row gap-4 h-[calc(100vh-6rem)] md:h-[72vh]">
 
-          <!-- Left: Map + controls -->
-          <div class="flex-1 flex flex-col gap-2">
-            <div class="flex items-center gap-2 mb-1">
-              <button
-                id="center-salem"
-                class="text-[11px] px-3 py-1.5 rounded-full bg-slate-900 border border-slate-700 hover:border-sky-500 hover:bg-slate-800 transition"
-              >
-                Center on Salem
-              </button>
-              <button
-                id="locate-me"
-                class="text-[11px] px-3 py-1.5 rounded-full bg-slate-900 border border-slate-700 hover:border-emerald-500 hover:bg-slate-800 transition"
-              >
-                Use my location
-              </button>
-              <span class="text-[11px] text-slate-500">
-                Click map to drop a pin, then fill the form →
-              </span>
-            </div>
-
-            <div class="flex-1 bg-slate-900/80 border border-slate-800 rounded-2xl overflow-hidden shadow-lg">
-              <div id="map"></div>
+          <!-- Map (embed) -->
+          <div class="flex-1 bg-slate-900/80 border border-slate-800 rounded-2xl overflow-hidden shadow-lg">
+            <div class="map-embed-wrapper">
+              <!-- Your embed map, just with a class -->
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90383.21730787378!2d-123.11146259914275!3d44.93399995020513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54bffefcbc4b9c63%3A0xf93429e08f0357c2!2sSalem%2C%20OR!5e0!3m2!1sen!2sus!4v1764399473241!5m2!1sen!2sus"
+                class="urbex-map-iframe"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
 
-          <!-- Right: Sidebar -->
+          <!-- Right: Sidebar (form + list) -->
           <div class="w-full md:w-80 flex flex-col gap-4">
 
-            <!-- Add location form -->
+            <!-- Add a spot -->
             <section class="bg-slate-900/80 border border-slate-800 rounded-2xl p-4 shadow-lg">
-              <h2 class="text-lg font-semibold mb-2 flex items-center gap-2">
+              <h2 class="text-lg font-semibold mb-2">
                 Add a spot
-                <span class="text-[10px] px-2 py-0.5 rounded-full bg-slate-800 text-slate-300">
-                  Click map first
-                </span>
               </h2>
               <p class="text-xs text-slate-400 mb-3">
-                Use this just for your own notes. Don’t share locations publicly if they’re sensitive or sketchy.
+                Find a place on the map, then copy the address or coordinates from Google Maps and paste it here.
               </p>
 
-              <form id="location-form" class="flex flex-col gap-2">
+              <form id="spot-form" class="flex flex-col gap-2">
                 <div>
                   <label class="block text-xs text-slate-300 mb-1">Name</label>
                   <input
                     type="text"
-                    id="loc-name"
-                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-sky-500 focus:border-sky-500"
-                    placeholder="Old warehouse by the tracks, rooftop, tunnel, etc."
+                    id="spot-name"
+                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
+                    placeholder="Old warehouse by the tracks"
+                    required
+                  />
+                </div>
+
+                <div>
+                  <label class="block text-xs text-slate-300 mb-1">
+                    Location (address or coords)
+                  </label>
+                  <input
+                    type="text"
+                    id="spot-location"
+                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
+                    placeholder="123 Example Rd, Salem OR OR 44.93, -123.03"
                     required
                   />
                 </div>
@@ -93,8 +90,8 @@
                 <div>
                   <label class="block text-xs text-slate-300 mb-1">Status</label>
                   <select
-                    id="loc-status"
-                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-sky-500 focus:border-sky-500"
+                    id="spot-status"
+                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
                   >
                     <option value="scouted">Scouted</option>
                     <option value="want-to-check">Want to check</option>
@@ -106,49 +103,23 @@
                 <div>
                   <label class="block text-xs text-slate-300 mb-1">Notes</label>
                   <textarea
-                    id="loc-notes"
+                    id="spot-notes"
                     rows="3"
-                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-sky-500 focus:border-sky-500"
-                    placeholder="Access notes, cameras, hazards, best time, parking, gear needed, etc."
+                    class="w-full px-3 py-2 rounded-lg bg-slate-950 border border-slate-700 text-sm outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
+                    placeholder="Access, cameras, hazards, best time, parking, gear needed..."
                   ></textarea>
-                </div>
-
-                <div class="flex gap-2">
-                  <div class="flex-1">
-                    <label class="block text-[11px] text-slate-400 mb-0.5">Lat</label>
-                    <input
-                      type="text"
-                      id="loc-lat"
-                      class="w-full px-2 py-1.5 rounded-lg bg-slate-950 border border-slate-800 text-xs"
-                      readonly
-                    />
-                  </div>
-                  <div class="flex-1">
-                    <label class="block text-[11px] text-slate-400 mb-0.5">Lng</label>
-                    <input
-                      type="text"
-                      id="loc-lng"
-                      class="w-full px-2 py-1.5 rounded-lg bg-slate-950 border border-slate-800 text-xs"
-                      readonly
-                    />
-                  </div>
                 </div>
 
                 <button
                   type="submit"
-                  class="mt-1 inline-flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium rounded-xl bg-sky-500 hover:bg-sky-400 text-white transition disabled:opacity-40 disabled:cursor-not-allowed"
-                  id="save-btn"
+                  class="mt-1 inline-flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium rounded-xl bg-slate-100 text-slate-900 hover:bg-white transition disabled:opacity-40 disabled:cursor-not-allowed"
                 >
                   Save spot
                 </button>
-
-                <p id="form-hint" class="text-[11px] text-slate-500 mt-1">
-                  If Save is disabled, click somewhere on the map to drop a pin first.
-                </p>
               </form>
             </section>
 
-            <!-- Filters + list -->
+            <!-- Spots list -->
             <section class="bg-slate-900/80 border border-slate-800 rounded-2xl p-4 shadow-lg flex-1 min-h-[150px]">
               <div class="flex items-center justify-between mb-2">
                 <h2 class="text-lg font-semibold">My spots</h2>
@@ -160,44 +131,67 @@
                 </button>
               </div>
 
-              <!-- Status filters -->
+              <!-- Filters -->
               <div class="flex flex-wrap gap-1 mb-2 text-[11px]">
-                <button class="filter-chip px-2.5 py-1 rounded-full border border-slate-600 bg-slate-800 text-slate-100" data-status="all">
+                <button class="filter-chip filter-active" data-status="all">
                   All
                 </button>
-                <button class="filter-chip px-2.5 py-1 rounded-full border border-slate-700 text-sky-200" data-status="scouted">
+                <button class="filter-chip" data-status="scouted">
                   Scouted
                 </button>
-                <button class="filter-chip px-2.5 py-1 rounded-full border border-slate-700 text-amber-200" data-status="want-to-check">
+                <button class="filter-chip" data-status="want-to-check">
                   Want to check
                 </button>
-                <button class="filter-chip px-2.5 py-1 rounded-full border border-slate-700 text-emerald-200" data-status="public-legal">
+                <button class="filter-chip" data-status="public-legal">
                   Public / legal
                 </button>
-                <button class="filter-chip px-2.5 py-1 rounded-full border border-slate-700 text-red-200" data-status="avoid">
+                <button class="filter-chip" data-status="avoid">
                   Avoid
                 </button>
+              </div>
+
+              <!-- Map key / legend -->
+              <div class="mb-2 text-[11px] text-slate-400">
+                <p class="mb-1">Legend (for your notes):</p>
+                <div class="flex flex-wrap gap-3">
+                  <div class="flex items-center gap-1">
+                    <span class="legend-dot legend-scouted"></span>
+                    <span>Scouted</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="legend-dot legend-want"></span>
+                    <span>Want to check</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="legend-dot legend-public"></span>
+                    <span>Public / legal</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="legend-dot legend-avoid"></span>
+                    <span>Avoid / unsafe</span>
+                  </div>
+                </div>
               </div>
 
               <div class="mb-2">
                 <input
                   type="text"
                   id="search-input"
-                  class="w-full px-3 py-1.5 rounded-lg bg-slate-950 border border-slate-700 text-xs outline-none focus:ring-2 focus:ring-sky-500 focus:border-sky-500"
-                  placeholder="Search by name, notes..."
+                  class="w-full px-3 py-1.5 rounded-lg bg-slate-950 border border-slate-700 text-xs outline-none focus:ring-2 focus:ring-slate-100 focus:border-slate-100"
+                  placeholder="Search by name, notes, location..."
                 />
               </div>
 
               <div
-                id="locations-list"
+                id="spots-list"
                 class="mt-2 space-y-2 max-h-56 overflow-y-auto pr-1 text-sm"
               >
                 <!-- Filled by JS -->
               </div>
 
               <p class="text-[11px] text-slate-500 mt-2">
-                Currently saves in your browser (localStorage).  
-                Hooks are ready to sync with a backend later (Supabase, Vercel, etc.).
+                Spots save only in this browser (localStorage).  
+                Clicking a spot opens it in Google Maps with your notes.
               </p>
             </section>
           </div>
@@ -205,9 +199,5 @@
       </div>
     </main>
   </div>
-
-  <!-- Google Maps JS API -->
-  <!-- Replace YOUR_REAL_GOOGLE_MAPS_API_KEY with your actual key -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_REAL_GOOGLE_MAPS_API_KEY&callback=initMap"></script>
 </body>
 </html>
