--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
     <header class="absolute top-3 left-1/2 -translate-x-1/2 z-10 px-4 py-2 rounded-full bg-slate-900/85 border border-slate-700 shadow-lg flex items-center gap-3 text-xs md:text-sm">
       <span class="font-semibold">Urbex Log · Salem</span>
       <span class="text-slate-400 hidden md:inline">
-        Private urbex map. Info only — no trespassing, no breaking in.
-      </span>
-      <span class="ml-auto text-[10px] px-2 py-0.5 rounded-full border border-amber-400/60 text-amber-200 bg-amber-500/10">
-        ⚠️ Stay legal & safe
+        Private urbex map.
       </span>
     </header>
 
@@ -98,8 +95,8 @@
                 <option value="urbex">Urbex (abandoned building)</option>
                 <option value="roofing">Roofing</option>
                 <option value="drain">Drain / Tunnel</option>
-                <option value="mixed">Mixed / Both</option>
-                <option value="other">Other / Not listed</option>
+                <option value="mixed">Both</option>
+                <option value="other">Not listed</option>
               </select>
             </div>
 
