--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script>
     const SUPABASE_URL = "https://cljndklondjwnvktlpwc.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNsam5ka2xvbmRqd252a3RscHdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ0ODE3NjYsImV4cCI6MjA4MDA1Nzc2Nn0.41UqqhR2z2gsH_4x0Pb0fzdUzZxCWVZVw-lEil3vTOk";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNsam5ka2xvbmRqd252a3RscHdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ0ODE3NjYsImV4CI6MjA4MDA1Nzc2Nn0.41UqqhR2z2gsH_4x0Pb0fzdUzZxCWVZVw-lEil3vTOk";
 
     window.supabaseClient = supabase.createClient(
       SUPABASE_URL,
@@ -44,23 +44,31 @@
     <header class="absolute top-3 left-1/2 -translate-x-1/2 z-10 px-4 py-2 rounded-full bg-slate-900/85 border border-slate-700 shadow-lg flex items-center gap-3 text-xs md:text-sm">
       <span class="font-semibold">Urbex Log · Salem</span>
       <span class="text-slate-400 hidden md:inline">
-        Private urbex map.
+        Private urbex map. Info only — no trespassing, no breaking in.
+      </span>
+      <span class="ml-auto text-[10px] px-2 py-0.5 rounded-full border border-amber-400/60 text-amber-200 bg-amber-500/10">
+        ⚠️ Stay legal & safe
       </span>
     </header>
 
-    <!-- Mobile toggle button -->
+    <!-- Mobile toggle button (top-right) -->
     <button
       id="panel-toggle"
-      class="md:hidden absolute bottom-4 right-4 z-20 rounded-full bg-slate-900/90 border border-slate-700 text-slate-100 w-10 h-10 flex items-center justify-center shadow-lg"
+      class="md:hidden absolute top-20 right-4 z-20 rounded-full bg-slate-900/90 border border-slate-700 text-slate-100 w-9 h-9 flex items-center justify-center shadow-lg"
       aria-label="Toggle details"
     >
-      ⮜
+      ⮞
     </button>
 
     <!-- Right-side panel -->
     <aside
       id="side-panel"
-      class="absolute top-20 right-0 bottom-0 md:right-4 w-full max-w-sm z-10 md:rounded-2xl md:bottom-4 md:border md:border-slate-700 md:bg-slate-900/90 md:shadow-2xl md:mr-0 bg-slate-900/95 border-l border-slate-800 md:border md:bg-slate-900/90 transition-transform duration-300 md:translate-x-0 translate-x-0"
+      class="absolute top-20 right-0 bottom-0 md:right-4 w-full max-w-sm z-10
+             rounded-l-2xl md:rounded-2xl
+             md:bottom-4 md:border md:border-slate-700 md:bg-slate-900/90 md:shadow-2xl md:mr-0
+             bg-slate-900/95 border border-slate-800
+             transition-transform duration-300
+             md:translate-x-0 translate-x-full"
     >
       <div class="h-full flex flex-col overflow-hidden md:rounded-2xl">
         <!-- Form -->
@@ -95,8 +103,8 @@
                 <option value="urbex">Urbex (abandoned building)</option>
                 <option value="roofing">Roofing</option>
                 <option value="drain">Drain / Tunnel</option>
-                <option value="mixed">Both</option>
-                <option value="other">Not listed</option>
+                <option value="mixed">Mixed / Both</option>
+                <option value="other">Other / Not listed</option>
               </select>
             </div>
 
